--- a/style.css
+++ b/style.css
@@ -1,53 +1,81 @@
+:root {
+  --color: rgb(66, 113, 152);
+  --txtc: rgb(57, 91, 119);
+}
+
 * {
-    box-sizing: border-box;
-    padding: 0px;
-    margin: 0px;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-header {
-    text-align: center;
-    padding: 30px 0px;
+h1 {
+  margin: 20px auto;
+  text-align: center;
+  color: var(--txtc);
 }
 
-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
+body {
+  background-color: aliceblue;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+}
+.container-area {
+  margin: 20px;
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+}
+#sketch-area {
+  display: flex;
+  flex-wrap: wrap;
+  /* margin: 100px auto; */
+  background-color: white;
 }
 
-/* container */
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    width: 804px;
-    height: auto;
-    border: 2px solid black;
+.cell {
+  border: 1px solid whitesmoke;
 }
-
-/* .squares {
-    width: 100px;
-    height: 100px;
-    border: 1px solid black;
+.hover {
+  background-color: var(--color);
+}
+/* input {
+  width: 70px;
+  border: none;
 } */
-.container>div {
-    width: 50px;
-    height: 50px;
-    border: 1px solid black;
-}
-
-.onhover {
-    background-color: black;
-}
 
 footer {
-    
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
-    font-size: small;
-    margin-bottom: 10px;
+  font-weight: lighter;
+  text-align: center;
+  margin: 30px auto 5px auto;
+  font-size: 0.8em;
+  color: var(--txtc);
+}
 
+input[type="text"] {
+  appearance: none;
+  border: none;
+  outline: none;
+  border-bottom: 0.2em solid var(--color);
+  background: rgba(var(--color), 0.2);
+  border-radius: 0.2em 0.2em 0 0;
+  padding: 0.4em;
+  color: var(--txtc);
+}
+
+button {
+  cursor: pointer;
+  appearance: none;
+  border: 0.2em solid var(--color);
+  background: hsl(0 0 0/0);
+  padding: 0.85em 1.5em;
+  color: var(--color);
+  border-radius: 2em;
+  transition: 1s;
+  &:hover,
+  &:focus,
+  &:active {
+    background: var(--color);
+    color: #fff;
+  }
 }
